--- a/bms-admin/src/main/resources/application-dev.yml
+++ b/bms-admin/src/main/resources/application-dev.yml
@@ -1,38 +1,37 @@
+#druid
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
+
     druid:
-      first:  #数据源1
-        url: jdbc:mysql://localhost:3306/renren-security-boot?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-        username: root
-        password:
-      second:  #数据源2
-        url: jdbc:mysql://10.10.168.18:3306/renren_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-        username: root
-        password:
-      initial-size: 10
-      max-active: 100
-      min-idle: 10
+      url: jdbc:mysql://localhost:3306/springboot
+      username: root
+      password:
+      # 初始化大小，最小，最大
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      # 配置获取连接等待超时的时间
       max-wait: 60000
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       time-between-eviction-runs-millis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
       min-evictable-idle-time-millis: 300000
-      validation-query: SELECT 1 FROM DUAL
+      validation-query: select 'x'
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
-      stat-view-servlet:
-        enabled: true
-        url-pattern: /druid/*
-        #login-username: admin
-        #login-password: admin
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      #pool-prepared-statements: false
+      #max-pool-prepared-statement-per-connection-size: 20
+      use-global-data-source-stat: true
+
       filter:
         stat:
-            log-slow-sql: true
-            slow-sql-millis: 1000
-            merge-sql: true
+          log-slow-sql: true
+          slow-sql-millis: 1000
+          merge-sql: true
         wall:
-            config:
-                multi-statement-allow: true
+          config:
+            multi-statement-allow: true
