--- a/bms-admin/src/main/resources/application-dev.yml
+++ b/bms-admin/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     druid:
-        url: jdbc:mysql://localhost:3306/bms-boot
+        url: jdbc:mysql://localhost:3306/renren-security-boot
         username: root
-        password: root
+        password:
         # 初始化大小，最小，最大
         initial-size: 5
         min-idle: 5
