--- a/bms-admin/pom.xml
+++ b/bms-admin/pom.xml
@@ -33,7 +33,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.pleier</groupId>
-			<artifactId>bms-commom</artifactId>
+			<artifactId>bms-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!--<dependency>
