--- a/bms-admin/src/main/resources/application-dev.yml
+++ b/bms-admin/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     druid:
-        url: jdbc:mysql://localhost:3306/renren-security-boot
+        url: jdbc:mysql://localhost:3306/renren-security-boot?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
         username: root
         password:
         # 初始化大小，最小，最大
