--- a/bms-common/pom.xml
+++ b/bms-common/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bms-commom</artifactId>
-
+    <artifactId>bms-common</artifactId>
+    <packaging>jar</packaging>
     <build>
         <finalName>${project.artifactId}</finalName>
     </build>
