--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>bms-boot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>bms-commom</module>
+        <module>bms-common</module>
         <module>bms-admin</module>
     </modules>
     <packaging>pom</packaging>
