--- a/bms-admin/pom.xml
+++ b/bms-admin/pom.xml
@@ -103,6 +103,7 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<!--thyleaf前端shiro权限控制-->
 		<dependency>
 			<groupId>com.github.theborakompanioni</groupId>
 			<artifactId>thymeleaf-extras-shiro</artifactId>
