--- a/bms-admin/src/main/resources/application.yml
+++ b/bms-admin/src/main/resources/application.yml
@@ -55,3 +55,15 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
     call-setters-on-nulls: true
+
+logging:
+  level:
+    root: info
+    com.github.pleier: debug
+  path: d:/springboot/log
+  #file: d:/springboot/log/aaaaaaa.log
+
+logback:
+  logdir: d:/springboot/log
+  appname: sell
+
