--- a/bms-admin/pom.xml
+++ b/bms-admin/pom.xml
@@ -27,7 +27,9 @@
 		<kaptcha.version>0.0.9</kaptcha.version>
 		<aliyun.oss.version>2.5.0</aliyun.oss.version>
 		<qcloud.cos.version>4.4</qcloud.cos.version>
+		<qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
 		<swagger.version>2.7.0</swagger.version>
+
 	</properties>
 
 	<dependencies>
@@ -96,6 +98,12 @@
 					<artifactId>slf4j-log4j12</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>${qiniu.version}</version>
 		</dependency>
 
 		<dependency>
