--- a/bms-admin/src/main/resources/application-dev.yml
+++ b/bms-admin/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     druid:
-        url: jdbc:mysql://localhost:3306/renren-security-boot?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://192.168.3.128:3306/bms-boot?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
         username: root
-        password:
+        password: root
         # 初始化大小，最小，最大
         initial-size: 5
         min-idle: 5
@@ -37,20 +37,20 @@ spring:
   #redis配置
   redis:
     database: 0
-    host: localhost
+    host: 192.168.3.128
     port: 6379
     password:
-    jedis:
+    lettuce:
       pool:
         max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
-        max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-idle: 10      # 连接池中的最大空闲连接
         min-idle: 5       # 连接池中的最小空闲连接
+        max-wait: -1ms    # 连接池最大阻塞等待时间（使用负值表示没有限制）
 
 bms:
   redis:
-    open: false  # 是否开启redis缓存  true开启   false关闭
+    open: true  # 是否开启redis缓存  true开启   false关闭
   shiro:
-    redis: false # true表示shiro session存到redis里，需要开启redis，才会生效【分布式场景】
+    redis: true # true表示shiro session存到redis里，需要开启redis，才会生效【分布式场景】
   sysconf:
-    redis: false #true表示参数管理的数据存到redis里
+    redis: true #true表示参数管理的数据存到redis里
